<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="75dp"
        android:text="@string/tv_login_name"
        app:layout_constraintBottom_toTopOf="@+id/edt_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_acess"
        android:layout_width="225dp"
        android:layout_height="0dp"
        android:layout_marginBottom="132dp"
        android:text="@string/btn_access_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/hint_password_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_acess"
        app:layout_constraintStart_toStartOf="@+id/edt_user"
        app:layout_constraintTop_toBottomOf="@+id/edt_user" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_pass"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>